src/app/app.component.css
/* h1,h2{
    font-family: "Raleway", sans-serif
}
p {
    line-height: 2
}
.bgimg, .bgimg2 {
  min-height: 100%;
  background-position: center;
  background-size: cover;
}
.bgimg {
    background-image: url("../assets/baby_shower.jpg");
    
}
.bgimg2 {
    background-image: url("../assets/babies.jpg");
}

.input-field {
    margin: 20px;
}

.font-header {
font-weight: 500;
font-family: 'Dosis', sans-serif;
}

.parallax {
    position: relative;
    opacity: 0.70;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
}

.section-parallax {
    padding-bottom: 200px;
    padding-top: 200px;
}

.poem {
    text-align: center;
} */

.pimg1, .pimg2, .pimg3{
    position:relative;
    opacity:0.70;
    background-position:center;
    background-size:cover;
    background-repeat:no-repeat;
  
    /*
      fixed = parallax
      scroll = normal
    */
    background-attachment:fixed;
  }

  @media screen and (max-width: 360px) {
    .pimg1{
        background-image:url('../assets/image1-mobile.jpg');
        min-height:100%;
    }
  }
  @media screen and (max-width: 800px) and (min-width: 361px) {
    .pimg1{
        background-image:url('../assets/image1-mobile.jpg');
        min-height:100%;
    }  
  }

  @media (min-width: 800px) {

      .pimg1{
        background-image:url('../assets/image1.jpg');
        min-height:100%;
      }
  }
  
  
  .pimg2{
    background-image:url('../assets/image2.jpg');
    min-height:100%;
  }
  
  .pimg3{
    background-image:url('../assets/image3.jpg');
    min-height:100%;
  }
  
  .section{
    text-align:center;
    padding:50px 80px;
  }
  
  .section-light{
    background-color:#f4f4f4;
    color:#666;
  }
  
  .section-dark{
    background-color:#282e34;
    color:#ddd;
  }
  
  .ptext{
    position:absolute;
    top:50%;
    width:100%;
    text-align:center;
    color:#000;
    font-size:27px;
    letter-spacing:8px;
    text-transform:uppercase;
  }
  
  .ptext .border{
    background-color:#111;
    color:#fff;
    padding:20px;
  }
  
  .ptext .border.trans{
    background-color:transparent;
  }

  .title {
      font-size: 60px;
  }

  input {
      margin: 20px;
  }



  /* apply style if width is more than 800px */
  @media (min-width: 800px) {
        .center-width-title {
            padding: 120px;
            margin: 0px;
        }
        .center-width-button {
            padding: 0px;
            margin: 0px;
        }
        .pimg3{
            background-image:url('../assets/image3-desktop.jpg');
            min-height:100%;
          }
  }
  
  /* apply style if width is less than 400px */
  @media (max-width: 360px) {
        .title {
            font-size: 40px;
        }

        .center-width-title {
            margin: 0px;
            padding: 30px;
        }

        .center-width-button{
            margin:0px;
            padding-top: 25px;
        }
  }
/* apply style if width is between 340 and 800 */
  @media screen and (max-width: 800px) and (min-width: 361px) {
    .title {
        font-size: 60px;
    }

    .center-width-title {
        margin: 0px;
        padding-top: 50px;
    }

    .center-width-button{
        margin:0px;
        padding-top: 40px;
    }
  }

  a {
      text-decoration: none;
  }


  .end-button {
      margin: 10px;
  }
  

